--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ h1 {
   width: 100%;
   text-align: center;
   color: #fff;
+  margin-bottom: 27px;
 }
 
 p {
@@ -133,7 +134,7 @@ td {
 }
 
 .result {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .result:empty {
@@ -141,7 +142,7 @@ td {
 }
 
 .array_container {
-  height: 430px;
+  height: 420px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -150,7 +151,7 @@ td {
 
 .array_card {
   background-color: white;
-  height: 400px;
+  height: 390px;
   width: 500px;
   box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
